aws-infra/ec2.tf
resource "aws_key_pair" "ssh-key" {
  key_name   = "ssh-key"
  public_key = var.ssh_public_key
}

data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}
resource "aws_instance" "ec2_instance" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = "t3.micro"
  availability_zone           = var.availability_zone
  subnet_id                   = aws_subnet.my_app.id
  # Add the security group to the EC2 instance to allow the HTTP and SSH traffic.
  vpc_security_group_ids   = [aws_security_group.allow_http_ssh.id]


  # Assign a public IP address to the EC2 instance.
  associate_public_ip_address = true

  key_name = "ssh-key"

  # Execute ustom commands into the EC2 instance at startup
  # Install Docker
  user_data = <<-EOF
  #!/bin/bash
  curl -fsSL https://get.docker.com -o get-docker.sh
  sudo sh get-docker.sh
  sudo groupadd docker
  sudo usermod -aG docker ubuntu
  newgrp docker
  EOF

  tags = {
    Name = "EC2-NODE-1"
  }
}
